[gd_scene load_steps=3 format=3 uid="uid://5hrpxd7ci76s"]

[ext_resource type="Script" uid="uid://bmfx82nah0hih" path="res://gameplay/wall_goal/wall_goal.gd" id="1_ol77t"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_087jk"]
size = Vector2(4, 512)

[node name="WallGoal" type="Area2D"]
collision_mask = 4
script = ExtResource("1_ol77t")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_087jk")

[node name="InvincibilityTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_invincibility_timer_timeout"]
